--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,16 @@ dist.dir=dist
 dist.jar=${dist.dir}/Fitnatic.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.charm-glisten-6.1.0.jar=D:\\Downloads\\charm-glisten-6.1.0.jar
 file.reference.fontawesomefx-8.9.jar=D:\\Downloads\\fontawesomefx-8.9.jar
+file.reference.javax.mail.jar=D:\\Downloads\\javax.mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.fontawesomefx-8.9.jar}
+    ${file.reference.fontawesomefx-8.9.jar}:\
+    ${file.reference.charm-glisten-6.1.0.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
