added javamail api and added exportPDF method for competitions

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,15 +28,23 @@ dist.jar=${dist.dir}/Fitnatic.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.charm-glisten-6.1.0.jar=D:\\Downloads\\charm-glisten-6.1.0.jar
+file.reference.commons-logging-1.2-javadoc.jar=D:\\Downloads\\commons-logging-1.2-bin\\commons-logging-1.2\\commons-logging-1.2-javadoc.jar
+file.reference.commons-logging-1.2.jar=D:\\Downloads\\commons-logging-1.2-bin\\commons-logging-1.2\\commons-logging-1.2.jar
 file.reference.fontawesomefx-8.9.jar=D:\\Downloads\\fontawesomefx-8.9.jar
+file.reference.fontbox-2.0.29.jar=D:\\Downloads\\fontbox-2.0.29.jar
 file.reference.javax.mail.jar=D:\\Downloads\\javax.mail.jar
+file.reference.pdfbox-2.0.29.jar=D:\\Downloads\\pdfbox-2.0.29.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
     ${file.reference.charm-glisten-6.1.0.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.fontbox-2.0.29.jar}:\
+    ${file.reference.pdfbox-2.0.29.jar}:\
+    ${file.reference.commons-logging-1.2-javadoc.jar}:\
+    ${file.reference.commons-logging-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
